--- a/BST_learn/makefile
+++ b/BST_learn/makefile
@@ -1,9 +1,3 @@
-tree01:
-	g++ -Wall -Wextra -g tree01.cpp
-
-tree02:
-	g++ -Wall -Wextra -g tree02.cpp
-
 tree03:
-	g++ -Wall -Wextra -O3 -g tree03.cpp
+	g++ -Wall -Wextra -g tree.cpp
 
