Compare speed cpp vs python

--- a/LinkedList/makefile
+++ b/LinkedList/makefile
@@ -2,3 +2,11 @@ test:
 	g++ -g -Wall -Wextra tests.cpp
 	./a.out
 
+speed:
+	g++ -std=c++11 -Wall -Wextra speed_test.cpp -o speed.out
+	./speed.out
+
+clean:
+	rm a.out
+	rm test.out
+
