--- a/LinkedList/makefile
+++ b/LinkedList/makefile
@@ -1,18 +1,18 @@
 test:
-	g++ -std=gnu++11 -g -Wall -Wextra -pedantic tests.cpp
-	./a.out
+	@echo "unittest has now separate makefile in unittest folder"
 
 speed:
+	@echo "*********Test Linked List speed C++ with 50M elements!*********"
 	g++ -std=c++11 -Wall -Wextra speed_test.cpp -o speed.out
 	./speed.out
-	echo "with O3"
+	@echo "C++ with O3"
 	g++ -std=c++11 -O3 speed_test.cpp -o speed.out
 	./speed.out
-	echo "Python 50M list append time ..."
+	@echo "Python list() 50M list append time ..."
 	python python_list.py
-	echo "Test Finished!"
+	@echo "*****************Test Finished!*********************************"
+
 
 clean:
-	rm a.out
-	rm test.out
+	rm speed.out
 
