--- a/BST_learn/.vscode/settings.json
+++ b/BST_learn/.vscode/settings.json
@@ -3,6 +3,10 @@
         "*.tcc": "cpp",
         "algorithm": "cpp",
         "cassert": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "string": "cpp",
+        "functional": "cpp",
+        "type_traits": "cpp",
+        "ostream": "cpp"
     }
 }
